week2 day5 exercises for CSS grid are done, with the kitty carousel i just need to fix that the picture is jumping to the according dot once its clicked ... hope to fix that on Monday.

--- a/Week2/Day3/style.css
+++ b/Week2/Day3/style.css
@@ -11,12 +11,12 @@ canvas {
 }
 
 #canvas2 {
-    left: 0px;
-    position: absolute;
+    position: fixed;
     z-index: 1.1;
+    left: -600px;
 }
 
 #canvas3 {
-    position: absolute;
-    left: 0px;
+    position: relative;
+    left: 100px;
 }
