--- a/Week2/Day4/Kitty Carousel/style.css
+++ b/Week2/Day4/Kitty Carousel/style.css
@@ -30,3 +30,28 @@
     transition-property: transform;
     transition-duration: 3s;
 }
+
+.dot {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    border: solid 3px greenyellow;
+    margin: 10px;
+    transition: background-color 2s ease;
+}
+
+#dots {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    position: absolute;
+    top: 550px;
+}
+
+.on {
+    background-color: greenyellow;
+}
+
+.dot:hover {
+    cursor: pointer;
+}
